; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/ipmi/extr_ipmi.c_ipmi_submit_driver_request.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/ipmi/extr_ipmi.c_ipmi_submit_driver_request.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ipmi_softc = type { i32 (%struct.ipmi_softc*, %struct.ipmi_request*, i32)* }
%struct.ipmi_request = type opaque
%struct.ipmi_request.0 = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ipmi_submit_driver_request(%struct.ipmi_softc* %0, %struct.ipmi_request.0* %1, i32 %2) #0 {
  %4 = alloca %struct.ipmi_softc*, align 8
  %5 = alloca %struct.ipmi_request.0*, align 8
  %6 = alloca i32, align 4
  store %struct.ipmi_softc* %0, %struct.ipmi_softc** %4, align 8
  store %struct.ipmi_request.0* %1, %struct.ipmi_request.0** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load %struct.ipmi_softc*, %struct.ipmi_softc** %4, align 8
  %8 = getelementptr inbounds %struct.ipmi_softc, %struct.ipmi_softc* %7, i32 0, i32 0
  %9 = load i32 (%struct.ipmi_softc*, %struct.ipmi_request*, i32)*, i32 (%struct.ipmi_softc*, %struct.ipmi_request*, i32)** %8, align 8
  %10 = load %struct.ipmi_softc*, %struct.ipmi_softc** %4, align 8
  %11 = load %struct.ipmi_request.0*, %struct.ipmi_request.0** %5, align 8
  %12 = bitcast %struct.ipmi_request.0* %11 to %struct.ipmi_request*
  %13 = load i32, i32* %6, align 4
  %14 = call i32 %9(%struct.ipmi_softc* %10, %struct.ipmi_request* %12, i32 %13)
  ret i32 %14
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
